F - fix opinionated property on small tag in root

--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -116,8 +116,6 @@ hr {
 small,
 figcaption,
 .small {
-  margin-top: 1em;
-  color: var(--comment);
   font-size: 0.9em;
   line-height: 1.4;
 }
